docker-compose.yml celery and redis added, settings for email smtp added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,16 @@ networks:
   notif_net:
 
 services:
+  broker:
+    image: redis
+    container_name: notification_broker
+    ports:
+      - 6379:6379
+    depends_on:
+      - db
+    networks:
+      - notif_net
+
   web:
     build:
       context: .
@@ -18,6 +28,23 @@ services:
       - .env
     depends_on:
       - db
+    networks:
+      - notif_net
+
+  worker:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: notification_worker
+    command: bash -c "cd src/ && celery -A config.celery worker -l INFO"
+    volumes:
+      - .:/app
+    ports: []
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - broker
     networks:
       - notif_net
 
