.env.example extended

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-vu@v5-6i==9(kv9&h(+tazgaeyug$b&l0ost8lv-tplj1anx6_
-DEBUG=true
+DEBUG=false
 
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=notif
@@ -8,3 +8,12 @@ SQL_PASSWORD=notif
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=your-smtp-server.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=true
+EMAIL_HOST_USER=your-smtp-username
+EMAIL_HOST_PASSWORD=your-smtp-password
+
+CELERY_BROKER_URL=redis://broker:6379/0
