--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     container_name: notification_worker
-    command: bash -c "cd src/ && celery -A config.celery worker -l INFO"
+    command: bash -c "cd src/ && celery -A config.celery worker -l INFO && celery -A config.celery beat --loglevel=info"
     volumes:
       - .:/app
     ports: []
