celery beat added, docker-compose extended, other fixes

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ EMAIL_HOST_USER=your-smtp-username
 EMAIL_HOST_PASSWORD=your-smtp-password
 
 CELERY_BROKER_URL=redis://broker:6379/0
+CELERY_RESULT_BACKEND=redis://broker:6379/0
