--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.0
 Django==4.2.7
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
+django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
@@ -16,6 +20,7 @@ packaging==23.2
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
