--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.1.1
 asgiref==3.7.2
 billiard==4.1.0
+black==23.11.0
 celery==5.3.4
 click==8.1.7
 click-didyoumean==0.3.0
@@ -15,11 +16,17 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
 inflection==0.5.1
+iniconfig==2.0.0
 kombu==5.3.2
+mypy-extensions==1.0.0
 packaging==23.2
+pathspec==0.11.2
+platformdirs==3.11.0
+pluggy==1.3.0
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+pytest==7.4.3
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
